src/test/deca/context/invalid/Objet/sameName_field_Method1.des
 The identifier entier is already used for   a field in the same super  class

